# autohash

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
benches/: bench.rs
src/: lib.rs  map.rs  set.rs  wrappers.rs
src/external_trait_impls/: serde.rs
src/external_trait_impls/rayon/: helpers.rs  map.rs  mod.rs  set.rs
