[package]
name = "autohash"
version = "0.1.0"
authors = ["Josh Stone <cuviper@gmail.com>"]
description = "A Map and Set for self-hashed keys"
license = "Apache-2.0/MIT"
repository = "https://github.com/cuviper/autohash"
readme = "README.md"
keywords = ["hash", "no_std", "hashmap", "hashset"]
categories = ["data-structures", "no-std"]
edition = "2018"

# For the raw table
[dependencies.hashbrown]
version = "0.9.1"
default-features = false
features = ["raw"] 

[dependencies]
# For external trait impls
rayon_dep = { version = "1.0", optional = true, package = "rayon" }
serde = { version = "1.0.25", default-features = false, optional = true }

[dev-dependencies]
ahash = { version = "0.4.4", default-features = false }
paste = "1.0.0"
# TODO: update testing for AutoHashMap/Set
# lazy_static = "1.2"
# rand = { version = "0.7.3", features = ["small_rng"] }
# rayon = "1.0"
# serde_test = "1.0"
# doc-comment = "0.3.1"

[features]
default = ["inline-more"]
rayon = ["rayon_dep", "hashbrown/rayon"]

# Enables usage of `#[inline]` on far more functions than by default in this
# crate. This may lead to a performance increase but often comes at a compile
# time cost.
inline-more = ["hashbrown/inline-more"]

[package.metadata.docs.rs]
features = ["rayon", "serde"]
